# RPG3

./: .gitignore  CMakeLists.txt  README.md  gameconfig.h.in
assets/: README.md  controls.json  debugScreenSettings.json  sounds.json
assets/basicscene/: scene.json
assets/mapmenuscene/: scene.json
assets/mapmenuscene/misc/: scene.json
assets/maps/: map01.json  map01dialogue.json  map01entity.json  map01script.json  map02.json  map02dialogue.json  map02entity.json  map02script.json  stressMap.json  stressMapEntity.json
assets/textboxscene/: scene.json  sounds.json
assets/textboxscene/decisionscene/: scene.json
assets/textures/data/: BoyA.json  GirlA.json  chronosprites.json  font.json  tileset01.json
assets/textures/image/: bg1.ase
assets/tiled/: tiled.tiled-project  tiled.tiled-session
assets/tilemapscene/: scene.json
assets/tilemapscene/map01/: scene.json
assets/tilemapscene/map02/: scene.json
assets/tilesetscene/: scene.json
config/: controls.json  pixelGameConfig.json
docs/: Doxyfile
include/: CommandMap.hpp  ComponentSet.hpp  Components.hpp  ComponentsImGui.hpp  DebugScreen.hpp  DebugText.hpp  DialogueResource.hpp  ECS.hpp  FPSHandler.hpp  FileResource.hpp  GRY_Audio.hpp  GRY_ECS.hpp  GRY_ECSImGui.hpp  GRY_Game.hpp  GRY_JSON.hpp  GRY_Lib.hpp  GRY_Log.hpp  GRY_Mousecode.hpp  GRY_PixelGame.hpp  GRY_SDL.hpp  GRY_Texture.hpp  GRY_Tiled.hpp  GRY_Vec.hpp  GRY_VecTD.hpp  GRY_Video.hpp  GameCommands.hpp  InputHandler.hpp  QuadTree.hpp  SDL_FRectOps.hpp  SDL_RectOps.hpp  Scene.hpp  SceneManager.hpp  SoundResource.hpp  SparseSet.hpp  Tile.hpp  TileCollision.hpp  TileComponents.hpp  TileEntityMap.hpp  TileMap.hpp  TileMapECS.hpp  (+4 more)
src/: DebugScreen.cpp  DebugText.cpp  DialogueResource.cpp  FPSHandler.cpp  GRY_Audio.cpp  GRY_Game.cpp  GRY_JSON.cpp  GRY_Lib.cpp  GRY_PixelGame.cpp  GRY_SDL.cpp  GRY_Texture.cpp  GRY_Tiled.cpp  GRY_Video.cpp  InputHandler.cpp  QuadTree.cpp  Scene.cpp  SceneManager.cpp  SoundResource.cpp  TileCollision.cpp  TileEntityMap.cpp  TileMap.cpp  Tileset.cpp  imguiDebugger.cpp  main.cpp
src/debugtexts/: DebugTextFPS.cpp  DebugTextFPS.hpp  DebugTextTilesetScene.cpp  DebugTextTilesetScene.hpp
src/scenes/: BattleScene.cpp  BattleScene.hpp  ExampleScene.cpp  ExampleScene.hpp  MapMenuMiscScene.cpp  MapMenuMiscScene.hpp  MenuScene.cpp  MenuScene.hpp  TextBoxScene.cpp  TextBoxScene.hpp  TextDecisionScene.cpp  TextDecisionScene.hpp  TileMapMenuScene.cpp  TileMapMenuScene.hpp  TileMapScene.cpp  TileMapScene.hpp  TilesetScene.cpp  TilesetScene.hpp
src/textbox/: Fontset.cpp  Fontset.hpp  TextBoxRenderer.cpp  TextBoxRenderer.hpp
src/tile/: Tile.hpp  TileCollision.cpp  TileCollision.hpp  TileComponents.hpp  TileComponentsImGui.hpp  TileEntityMap.cpp  TileEntityMap.hpp  TileMap.cpp  TileMap.hpp  TileMapCamera.cpp  TileMapCamera.hpp  TileMapCommand.hpp  TileMapDialogueResource.cpp  TileMapDialogueResource.hpp  TileMapECS.hpp  TileMapImGui.hpp  TileMapInput.cpp  TileMapInput.hpp  TileMapMovement.cpp  TileMapMovement.hpp  TileMapQuadTrees.cpp  TileMapQuadTrees.hpp  TileMapRenderer.cpp  TileMapRenderer.hpp  TileMapScriptResource.cpp  TileMapScriptResource.hpp  TileMapScripting.cpp  TileMapScripting.hpp  TileMapSpeak.cpp  TileMapSpeak.hpp  TileRegisterMapCommandFuncs.hpp  TileRegisterMapCommands.hpp  TileSpriteAnimator.cpp  TileSpriteAnimator.hpp  TileTileMap.cpp  TileTileMap.hpp  Tileset.cpp  Tileset.hpp
src/transitions/: FadeToBlack.cpp  FadeToBlack.hpp
